After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751221 - motioncells: Fix the build on FreeBSD
motioncells: Fix the build on FreeBSD
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.5.1
Other FreeBSD
: Normal normal
: 1.5.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-06-19 12:55 UTC by Koop Mast (kwm)
Modified: 2015-06-22 19:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add sys/time.h (656 bytes, patch)
2015-06-19 12:56 UTC, Koop Mast (kwm)
needs-work Details | Review
motioncells: Port to g_get_current_time (1.29 KB, patch)
2015-06-22 19:48 UTC, Nicolas Dufresne (ndufresne)
committed Details | Review

Description Koop Mast (kwm) 2015-06-19 12:55:05 UTC
On FreeBSD the opencv plugin doesn't build because the struct of timeval is unknown.

  CC       libgstopencv_la-gstopencv.lo
In file included from gstopencv.c:35:
./gstmotioncells.h:109:18: error: field has incomplete type 'struct timeval'
  struct timeval tv;
                 ^
./gstmotioncells.h:109:10: note: forward declaration of 'struct timeval'
  struct timeval tv;
         ^
1 error generated.
Comment 1 Koop Mast (kwm) 2015-06-19 12:56:16 UTC
Created attachment 305696 [details] [review]
Add sys/time.h

I'm not sure if the #ifdef lines are needed, but since configure checks for the present of sys/time.h, I thoughed it might be a good idea.
Comment 2 Nicolas Dufresne (ndufresne) 2015-06-19 13:26:35 UTC
Review of attachment 305696 [details] [review]:

Thanks for the patch. I think we should just use GTimeVal. It's a compatible definition foundin GLib (hence always included by GStreamer).
Comment 3 Sebastian Dröge (slomo) 2015-06-22 16:37:01 UTC
Comment on attachment 305696 [details] [review]
Add sys/time.h

Yes, what Nicolas said
Comment 4 Nicolas Dufresne (ndufresne) 2015-06-22 19:48:11 UTC
Created attachment 305854 [details] [review]
motioncells: Port to g_get_current_time

This is more portable.
Comment 5 Nicolas Dufresne (ndufresne) 2015-06-22 19:55:11 UTC
Attachment 305854 [details] pushed as 55a5c5f - motioncells: Port to g_get_current_time
Comment 6 Nicolas Dufresne (ndufresne) 2015-06-22 19:55:56 UTC
Comment on attachment 305854 [details] [review]
motioncells: Port to g_get_current_time

commit 55a5c5f7df7ef37a2924b23337687bbc83cb7744
Author: Nicolas Dufresne <nicolas.dufresne@collabora.co.uk>
Date:   Mon Jun 22 15:47:18 2015 -0400

    motioncells: Port to g_get_current_time