motioncells: Port to g_get_current_time

This is more portable.

https://bugzilla.gnome.org/show_bug.cgi?id=751221